[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "calgroup-builder"
description = "Syncs JupyterHub users to Calgroup"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["jupyterhub", "calgroup", "sync"]
authors = [
    {name = "yijun", email = "yijunge@berkeley.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]


dependencies = [
    "tornado",
    "packaging",
    "traitlets",
    "grouper @ git+https://github.com/ryanlovett/grouper-cli.git#egg=grouper-cli"
]

# Add the version to the dynamic field
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
"calgroup-sync" = "calgroup_builder:main"

[project.urls]
Documentation = "https://github.com/berkeley-dsep-infra/calgroup-builder#readme"
Source = "https://github.com/berkeley-dsep-infra/calgroup-builder"
Issues = "https://github.com/berkeley-dsep-infra/calgroup-builder/issues"


# hatch ref: https://hatch.pypa.io/latest/
#
[tool.hatch.version]
path = "calgroup_builder/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

# autoflake is used for autoformatting Python code
#
# ref: https://github.com/PyCQA/autoflake#readme
#
[tool.autoflake]
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

# isort is used for autoformatting Python code
#
# ref: https://pycqa.github.io/isort/
#
[tool.isort]
profile = "black"

# pytest is used for running Python based tests
#
# ref: https://docs.pytest.org/en/stable/
#
[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10 --cov=calgroup_builder"
asyncio_mode = "auto"


# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
github_url = "https://github.com/berkeley-dsep-infra/calgroup-builder"

[tool.tbump.version]
current = "0.0.1.dev"
regex = '''
    (?P<major>\d+)
    \.
    (?P<minor>\d+)
    \.
    (?P<patch>\d+)
    (?P<pre>((a|b|rc)\d+)|)
    \.?
    (?P<dev>(?<=\.)dev\d*|)
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "calgroup_builder/__init__.py"
